# Multi_Task_Network

./: .env  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: REQUESTS.md  notes.md
models/config_2/: run_1_epoch_1.pt
models/config_3/: run_2_epoch_1.pt  run_2_scaler.pkl
models/config_4/: run_3_epoch_3.pt  run_3_scaler.pkl
models/config_5/: run_4_epoch_16.pt  run_5_epoch_13.pt  run_5_scaler.pkl
models/config_6/: run_6_epoch_3.pt  run_6_scaler.pkl
models/config_7/: run_7_epoch_31.pt  run_7_scaler.pkl
models/config_8/: run_8_epoch_1.pt  run_8_scaler.pkl
models/config_9/: run_10_epoch_1.pt  run_11_epoch_2.pt  run_12_epoch_2.pt  run_12_scaler.pkl  run_13_epoch_2.pt  run_9_epoch_3.pt
mysql/: .env  NOTES.md  docker-compose.yml
mysql/mysql-conf/: my.cnf
notebooks/: lstm2_pipeline.ipynb
notebooks/.ipynb_checkpoints/: lstm2_pipeline-checkpoint.ipynb
scripts/: seed_examples.py
src/api/: database.py  main.py
src/api/downloader/: alpaca_client.py  database.py  errors.py  models.py  services.py  settings.py
src/api/features/: indicators.py  schema.py
src/api/models/: __init__.py  stock.py  training_config.py  training_run.py
src/api/routers/: alpaca.py  bars.py  features.py  stocks.py  training.py  training_data.py
src/api/schemas/: stock.py  training_config.py  training_run.py
src/api/training/: model.py  pipeline.py  runner.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.jsx
src/frontend/src/components/: CandleChart.jsx  Layout.jsx  SubPane.jsx
src/frontend/src/lib/: chartTime.js
(+7 files in other folders)
